infrastructure/kyverno-policies/require-requests-limits.yaml
# Source: https://github.com/kyverno/policies/blob/main/best-practices/require-pod-requests-limits/require-pod-requests-limits.yaml
# Author: Kyverno Project
# License: Apache 2.0
# Modifications: Adjusted namespace exclusion scope, removed initContainers from validation scope
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-requests-limits
  annotations:
    policies.kyverno.io/title: Require Limits and Requests
    #policies.kyverno.io/category: Best Practices, EKS Best Practices
    policies.kyverno.io/category: Workload Security and Governance Policies
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/minversion: 1.6.0
    policies.kyverno.io/description: As application workloads share cluster resources, it is important to limit resources requested and consumed by each Pod. It is recommended to require resource requests and limits per Pod, especially for memory and CPU. If a Namespace level request or limit is specified, defaults will automatically be applied to each Pod based on the LimitRange configuration. This policy validates that all containers have something specified for memory and CPU requests and mem [...]
spec:
  validationFailureAction: Enforce
  background: true
  generateExisting: true
  rules:
    - name: validate-resources
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: CPU and memory resource requests and memory limits are required for containers.
        pattern:
          spec:
            containers:
              - resources:
                  requests:
                    memory: "?*"
                    cpu: "?*"
                  limits:
                    memory: "?*"
            "=(ephemeralContainers)":
              - resources:
                  requests:
                    memory: "?*"
                    cpu: "?*"
                  limits:
                    memory: "?*"
      exclude:
        any:
          - resources:
              namespaces:
                - flux-system
                - istio-system
                - kube-system
                - longhorn-system
                - openebs
                - velero
