infrastructure/kyverno-policies/restrict-image-registries.yaml
# Source: https://github.com/kyverno/policies/blob/main/best-practices/restrict-image-registries/restrict-image-registries.yaml
# Author: Kyverno Project
# License: Apache 2.0
# Modifications: Adjusted trusted registries
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-image-registries
  annotations:
    policies.kyverno.io/title: Restrict Image Registries
    #policies.kyverno.io/category: Best Practices, EKS Best Practices
    policies.kyverno.io/category: Kyverno
    policies.kyverno.io/severity: medium
    policies.kyverno.io/minversion: 1.6.0
    kyverno.io/kubernetes-version: "1.26"
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: Images from unknown, public registries can be of dubious quality and may not be scanned and secured, representing a high degree of risk. Requiring use of known, approved registries helps reduce threat exposure by ensuring image pulls only come from them. This policy validates that container images only originate from the registry `eu.foo.io` or `bar.io`. Use of this policy requires customization to define your allowable registries.
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: validate-registries
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: Not trusted image registry.
        pattern:
          spec:
            "=(ephemeralContainers)":
              - image: docker.io/* | ghcr.io/* | gcr.io/* | registry.k8s.io/* | quay.io/* | reg.kyverno.io/* | mirror.gcr.io/* | us-central1-docker.pkg.dev/*
            "=(initContainers)":
              - image: docker.io/* | ghcr.io/* | gcr.io/* | registry.k8s.io/* | quay.io/* | reg.kyverno.io/* | mirror.gcr.io/* | us-central1-docker.pkg.dev/*
            containers:
              - image: docker.io/* | ghcr.io/* | gcr.io/* | registry.k8s.io/* | quay.io/* | reg.kyverno.io/* | mirror.gcr.io/* | us-central1-docker.pkg.dev/*
