infrastructure/kyverno-policies/verify-git-repositories.yaml
# Source: https://github.com/kyverno/policies/blob/main/flux/verify-git-repositories/verify-git-repositories.yaml
# Author: Kyverno Project
# License: Apache 2.0
# Modifications: Modified git repository
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-git-repositories
spec:  
  # This provides users a working example of how an admin
  # would be able to enforce git repository sources across
  # all tenants.
  validationFailureAction: Audit # Change to 'Enforce' once the specific org url is set.
  rules:
    - name: github-repositories-only
      match:
        any:
        - resources:
            kinds:
              - GitRepository
      exclude:
        any:
        - resources:
            namespaces:
              - flux-system
      validate:
        message: ".spec.url must be from a repository within the organisation X"
        pattern:
          spec:
            url: https://github.com/opipenbe/?* | ssh://git@github.com:opipenbe/?*
